# VehicleDetectionLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/: TestHeader.h
lib/src/: TestHeader.cpp  main.cpp
